# NG_2024_Vitaliy_Strizheus

task2/: CMakeLists.txt  main.cpp
task3/: CMakeLists.txt  main.cpp
